<resources>
    <string name="app_name">Calc</string>
    <string name="n1">1</string>
    <string name="n2">2</string>
    <string name="n3">3</string>
    <string name="n4">4</string>
    <string name="n5">5</string>
    <string name="n6">6</string>
    <string name="n7">7</string>
    <string name="n8">8</string>
    <string name="n9">9</string>
    <string name="n0">0</string>
    <string name="sumar">+</string>
    <string name="resta">-</string>
    <string name="multiplicacion">x</string>
    <string name="division">÷</string>
    <string name="coma">,</string>
    <string name="borrar">«</string>
    <string name="limpiar">C</string>
    <string name="porcentaje">%</string>
    <string name="igual">=</string>
</resources>